--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -2,4 +2,4 @@ $white: white;
 $black: black;
 $link: #0092f3;
 $linkhover: #0f63c4;
-$background: "https://www.ontarioparks.com/parksblog/wp-content/uploads/2016/09/Waterfalls-of-Ontario-Parks.jpg";
+$background: "/assets/images/background.png";
